--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,13 @@
 <!-- 		<shiro.version>1.4.0-RC2</shiro.version> -->
 	</properties>
   <dependencies>
+	<dependency>
+	    <groupId>net.sourceforge.jexcelapi</groupId>
+	    <artifactId>jxl</artifactId>
+	    <version>2.6.12</version>
+	</dependency>
+
+	
   	<dependency>
 	    <groupId>io.netty</groupId>
 	    <artifactId>netty-all</artifactId>
@@ -70,11 +77,11 @@
 		<version>${spring.version}</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/com.google.maps/google-maps-services -->
-<dependency>
-    <groupId>com.google.maps</groupId>
-    <artifactId>google-maps-services</artifactId>
-    <version>0.1.20</version>
-</dependency>
+	<dependency>
+	    <groupId>com.google.maps</groupId>
+	    <artifactId>google-maps-services</artifactId>
+	    <version>0.1.20</version>
+	</dependency>
 
 	<dependency>
 			<groupId>com.alibaba</groupId>
